# Hybrid-Job-Matching-Mock-Interview-Platform

./: .gitignore  README.md  config.py  debug_env.py  main.py  pyproject.toml  requirements.txt  run.py  test_db_connection.py
app/: __init__.py
app/api/: __init__.py  gemini.py  interview_service.py
app/auth/: decorators.py  routes.py
app/main/: routes.py
app/models/: __init__.py  user.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  dashboard.html  index.html  interview_placeholder.html  interview_setup.html  login.html
migrations/versions/: 889e73c2ff2f_initial_migration.py
